# service/src/main/webui/src/app/api/model/response37.ts
@@ -13,5 +13,6 @@ export interface Response37 {
     commitHash?: string;
     hasConflicts?: boolean;
     output?: string;
+    cleanedUp?: boolean;
 }
 
